--- a/components/project-info/project-info.component.html
+++ b/components/project-info/project-info.component.html
@@ -1,2 +1,2 @@
-<link rel="import" href="project-info-main.component.html">
+<link rel="import" href="project-info-block.component.html">
 <link rel="import" href="project-info-item.component.html">
