--- a/components/create-test/create-test.component.html
+++ b/components/create-test/create-test.component.html
@@ -5,7 +5,7 @@
 <!--Style CSS-->
 <style>
     create-test {
-        width: auto;
+        width: 100%;
         display: inline-block;
         height: auto;
     }
