--- a/components/create-test/step-content.component.html
+++ b/components/create-test/step-content.component.html
@@ -2,7 +2,7 @@
 <!--Style CSS-->
 <style>
     step-content {
-        width: 562px;
+        width: 100%;
         display: inline-block;
         padding: 0 20px;
         height: auto;
