--- a/components/create-test/step-header.component.html
+++ b/components/create-test/step-header.component.html
@@ -5,7 +5,7 @@
     step-header {
         padding: 12px 20px;
         display: inline-block;
-        width: 562px;
+        width: 100%;
         height: 80px;
         border-top: 1px solid #eee;
         border-bottom: 1px solid #eee;
