--- a/components/blocker/blocker-wrapp.component.html
+++ b/components/blocker/blocker-wrapp.component.html
@@ -8,10 +8,7 @@
         display: inline-block;
         padding-left: 20px;
         padding-right: 20px;
-        border: 1px solid #eee;
-/*        position: absolute;*/
-/*        bottom: 0;*/
-        height: 300px;
+/*        border: 1px solid #eee;*/
 
     }
 </style>
