--- a/components/project-info/project-info-block.component.html
+++ b/components/project-info/project-info-block.component.html
@@ -8,38 +8,34 @@
             vertical-align: top;
         }   
         
-    </style>
-
-    <template id="project-info-block__tmpl">
-        <style>
-            .project-info-block__header {
-                color: #909090;
-                font: 12px/24px globersemibold;
-                text-transform: uppercase;
-                position: relative;
-            }
-            .sidebar-info-main__link {
-                color: inherit;
-                text-decoration: none;
-            }
-            .project-info-block__link span:before {
-                content: "";
-                display: block;
-                position: absolute;
-                border: 3px solid transparent;
-                border-bottom: 4px solid transparent;
-                border-left: 3px solid transparent;
-                border-right: 3px solid transparent;
-                border-top: 4px solid #828282;
-                left: -12px;
-                top: 7px;
-            }
+        .project-info-block__header {
+            color: #909090;
+            font: 12px/24px globersemibold;
+            text-transform: uppercase;
+            position: relative;
+        }
+        .sidebar-info-main__link {
+            color: inherit;
+            text-decoration: none;
+        }
+        .project-info-block__link span:before {
+            content: "";
+            display: block;
+            position: absolute;
+            border: 3px solid transparent;
+            border-bottom: 4px solid transparent;
+            border-left: 3px solid transparent;
+            border-right: 3px solid transparent;
+            border-top: 4px solid #828282;
+            left: -12px;
+            top: 7px;
+        }
 
         </style>
+    <template id="project-info-block__tmpl">
         <h3 class="project-info-block__header a project-info-block__link">
             <a href="#" class="sidebar-info-main__link"><span></span></a>
         </h3>
-        <slot></slot>
     </template>
 
     <script>
@@ -48,17 +44,16 @@
         var thisDoc = (thatDoc._currentScript || thatDoc.currentScript).ownerDocument;
         
         var ProjectInfoBlockTemplate = thisDoc.querySelector('#project-info-block__tmpl');
-
         class ProjectInfoBlock extends HTMLElement {
 
             constructor() {
                 super()
-                var root = this.attachShadow({mode: 'open'});
-                root.appendChild(ProjectInfoBlockTemplate.content.cloneNode(true));
-                root.querySelector('.sidebar-info-main__link span').innerHTML = this.getAttribute('title');
+                this.insertBefore(ProjectInfoBlockTemplate.content.cloneNode(true), this.firstChild);
+                
             }
 
             connectedCallback() {
+                this.querySelector('.sidebar-info-main__link span').innerHTML = this.getAttribute('title');
             }
             
             adoptedCallback() {}
