--- a/components/project-info/project-info.component.html
+++ b/components/project-info/project-info.component.html
@@ -1,2 +1,3 @@
 <link rel="import" href="project-info-block.component.html">
 <link rel="import" href="project-info-item.component.html">
+<link rel="import" href="sidebar-text.component.html">
