--- a/components/sidebar-wrapp/sidebar-header.component.html
+++ b/components/sidebar-wrapp/sidebar-header.component.html
@@ -1,6 +1,9 @@
 
 <style>
-
+    sidebar-header {
+        display: inline-block;
+        width:280px;
+    }
     .sidebar__header {
         font: 13px 'globerbold';
         line-height: 24px;
