--- a/components/blocker/blocker-wrapp.component.html
+++ b/components/blocker/blocker-wrapp.component.html
@@ -8,8 +8,8 @@
         display: inline-block;
         padding-left: 20px;
         padding-right: 20px;
-/*        border: 1px solid #eee;*/
-
+/*        border-left: 1px solid #eee;*/
+/*        border-right: 1px solid #eee;*/
     }
 </style>
 
