--- a/components/create-test/step-content.component.html
+++ b/components/create-test/step-content.component.html
@@ -3,7 +3,11 @@
 <style>
     step-content {
         width: 100%;
-        display: inline-block;
+        display: -webkit-flex;
+        display: -moz-flex;
+        display: -ms-flex;
+        display: -o-flex;
+        display: flex;
         padding: 0 20px;
         height: auto;
     }
