--- a/components/blocker/blocker-person.component.html
+++ b/components/blocker/blocker-person.component.html
@@ -5,6 +5,11 @@
         width: 100%;
         height: 26px;
         line-height: 26px;
+
+    }
+    blocker-person:hover {
+        cursor: pointer;
+        background-color: #E0F0F8;
     }
     .blocker-person__name {
         display: inline-block;
