--- a/components/blocker/blocker-wrapp.component.html
+++ b/components/blocker/blocker-wrapp.component.html
@@ -10,6 +10,7 @@
         padding-right: 20px;
 /*        border-left: 1px solid #eee;*/
 /*        border-right: 1px solid #eee;*/
+        align-self: flex-end;
     }
 </style>
 
