--- a/components/blocker/search-and-add.component.html
+++ b/components/blocker/search-and-add.component.html
@@ -3,9 +3,13 @@
 
     search-and-add {
         display: inline-block;
-        width: 280px;
+        width: 320px;
 /*        position: absolute;*/
 /*        bottom: 0;*/
+        padding-left: 20px;
+        padding-right: 20px;
+        border-bottom: 1px solid #eee;
+        align-self: flex-end;
     }
     .search-add__header {
         font: 11px 'globerregular';
