--- a/components/create-test/step-content.component.html
+++ b/components/create-test/step-content.component.html
@@ -3,11 +3,7 @@
 <style>
     step-content {
         width: 100%;
-        display: -webkit-flex;
-        display: -moz-flex;
-        display: -ms-flex;
-        display: -o-flex;
-        display: flex;
+        display: inline-block;
         padding: 0 20px;
         height: auto;
     }
