--- a/components/navbar/navbar-vertical.component.html
+++ b/components/navbar/navbar-vertical.component.html
@@ -4,7 +4,7 @@
 
     navbar-vertical {
         display: inline-block;
-        height: 854px;
+/*        height: 854px;*/
         width: 40px;
         background-color: #0C003B;
     }
