--- a/components/sidebar-wrapp/sidebar-wrapp.component.html
+++ b/components/sidebar-wrapp/sidebar-wrapp.component.html
@@ -10,7 +10,9 @@
         width: 320px;
         display: inline-block;
         padding: 20px;
-        border: 1px solid #eee;
+        border-left: 1px solid #eee;
+        border-right: 1px solid #eee;
+        border-top: 1px solid #eee;
         position: relative;
     }
 </style>
