--- a/css/main.css
+++ b/css/main.css
@@ -115,8 +115,19 @@ label {
 }
 
 .cont {
-    height: 100%;
     /*        border-left: 1px solid #eee;*/
     /*        border-right: 1px solid #eee;*/
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+/*    flex-direction: column;*/
+/*    align-items: baseline;*/
+    flex-wrap: wrap;
+    border-left: 1px solid #eee;
+    border-right: 1px solid #eee;
+    border-top: 1px solid #eee;
+/*    align-content: space-between;*/
 }
 
