--- a/components/blocker/search-and-add.component.html
+++ b/components/blocker/search-and-add.component.html
@@ -16,6 +16,7 @@
         color: #676767;
         line-height: 24px;
         margin-top: 11px;
+        display: inline-block;
     }
     .searchadd__text {
         width: 100%;
@@ -24,12 +25,22 @@
         font: 13px 'globerregular';
         padding-left: 4px;
         margin-bottom: 22px;
-
     }
     .searchadd__text::-webkit-input-placeholder {color:#ABABAB;}
     .searchadd__text::-moz-placeholder          {color:#ABABAB;}
     .searchadd__text:-moz-placeholder           {color:#ABABAB;}
     .searchadd__text:-ms-input-placeholder      {color:#ABABAB;}
+    .search-add__arrow {
+        display: inline-block;
+        float: right;
+        width: 10px;
+        height: 5px;
+        background-image: url(blocker-img/arrow-up.png);
+        -webkit-background-size: cover;
+        background-size: cover;
+        background-position: center center;
+        margin-top: 19px;
+    }
 </style>
 
 
@@ -37,7 +48,7 @@
 <template id="search-and-add__tmpl">
 
     <h3 class="search-add__header"></h3>
-<!--    <span class="search-add__arrow"></span>-->
+    <span class="search-add__arrow"></span>
     <input type="text" name="" class="searchadd__text" placeholder="Поиск по слову">
 </template>
 
@@ -60,6 +71,9 @@
 
         connectedCallback() {
             this.querySelector('.search-add__header').innerHTML = this.getAttribute('title');
+            this.querySelector('.search-add__arrow').addEventListener("click", () => {
+                alert('Arrow');
+            });
         }
 
         adoptedCallback() {}
