--- a/components/requirement/choose-btn.component.html
+++ b/components/requirement/choose-btn.component.html
@@ -1,7 +1,10 @@
 <style>
     choose-btn {
         height: 24px;
-        width: 78px;
+/*        width: 78px;*/
+        width: auto;
+        padding-left: 10px;
+        padding-right: 10px;
         border-radius: 3px;
         display: inline-block;
         border: 1px solid #0083C7;
@@ -12,6 +15,7 @@
         cursor: pointer;
         line-height: 22px;
         padding-top: 2px;
+        margin-left: 18px;
     }
 </style>
 
