commit all change

--- a/components/navbar/navbar-horizontal-bars.component.html
+++ b/components/navbar/navbar-horizontal-bars.component.html
@@ -4,14 +4,14 @@
     navbar-bars {
         width: 18px;
         height: 16px;
-        float: left;
         display: inline-block;
-        margin-top: 25px;
         background-image: url(navbar-img/navbar-bars.png);
         -webkit-background-size: cover;
         background-size: cover;
         background-position: center center;
         cursor: pointer;
+        order: -100;
+        align-items: center;
     }
 </style>
 
