--- a/components/navbar/navbar-horizontal-search-input.component.html
+++ b/components/navbar/navbar-horizontal-search-input.component.html
@@ -3,11 +3,10 @@
 <style>
     navbar-search-input {
         display: inline-block;
-        float: right;
         width: 305px;
         height: 27px;
         position: relative;
-        margin-top: 20px;
+        margin-left: auto;
     }
     .navbar-search {
         border: 1px solid #E1E1E1;
