--- a/components/requirement/requirement-card-text.component.html
+++ b/components/requirement/requirement-card-text.component.html
@@ -23,6 +23,7 @@
         font: 12px 'globerregular';
         padding-left: 10px;
         padding-right: 10px;
+        margin-bottom: 6px;
     }
 </style>
 
