--- a/components/sidebar-wrapp/sidebar-header.component.html
+++ b/components/sidebar-wrapp/sidebar-header.component.html
@@ -22,7 +22,7 @@
 <!--Template-->
 <template id="sidebar-header__tmpl">
     <h3 class="sidebar__header"> </h3>
-    <p class="sidebar__subheader"><slot name="test"></slot></p>
+    <p class="sidebar__subheader"> </p>
 </template>
 
 
