--- a/components/sidebar-wrapp/sidebar-info-select.component.html
+++ b/components/sidebar-wrapp/sidebar-info-select.component.html
@@ -1,5 +1,9 @@
 
 <style>
+    sidebar-select {
+        display: inline-block;
+        width: 100%;
+    }
     .select-component__header {
         font: 13px 'globerbold';
         line-height: 24px;
@@ -7,7 +11,7 @@
     }
     .select-component {
         font: 13px 'globerregular';
-        width: 300px;
+        width: 105%;
         border: none;
         height: 25px;
         line-height: 25px;
@@ -18,7 +22,7 @@
     }
     .select-component-outer {
         border: #ccc 1px solid;
-        width: 280px;
+        width: 100%;
         overflow: hidden;
         display: inline-block;
         position: relative;
