--- a/components/sidebar-wrapp/sidebar-textarea.component.html
+++ b/components/sidebar-wrapp/sidebar-textarea.component.html
@@ -1,6 +1,9 @@
 <!--Style CSS-->
 <style>
-
+    sidebar-textarea {
+        width: 100%;
+        display: inline-block;
+    }
     .textarea__header {
         font: 13px 'globerbold';
         line-height: 24px;
