--- a/components/sidebar-wrapp/sidebar-textinput.component.html
+++ b/components/sidebar-wrapp/sidebar-textinput.component.html
@@ -1,5 +1,9 @@
 <!--Style CSS-->
 <style>
+    sidebar-textinput {
+        display: inline-block;
+        width: 100%;
+    }
     .sidebar-textinput__text {
         height: 26px;
         border: 1px solid #ccc;
