--- a/components/sidebar-wrapp/sidebar-wrapp.component.html
+++ b/components/sidebar-wrapp/sidebar-wrapp.component.html
@@ -8,12 +8,16 @@
 <style>
     sidebar-wrapp {
         width: 320px;
-        display: inline-block;
+        display: -webkit-inline-flex;
+        display: -moz-inline-flex;
+        display: -ms-inline-flex;
+        display: -o-inline-flex;
+        display: inline-flex;
+        flex-direction: column;
         padding: 20px;
         border-left: 1px solid #eee;
         border-right: 1px solid #eee;
         border-top: 1px solid #eee;
-        position: relative;
     }
 </style>
 
