--- a/components/create-test/step-content.component.html
+++ b/components/create-test/step-content.component.html
@@ -6,6 +6,12 @@
         display: inline-block;
         padding: 0 20px;
         height: auto;
+        display: -webkit-flex;
+        display: -moz-flex;
+        display: -ms-flex;
+        display: -o-flex;
+        display: flex;
+        flex-wrap: wrap;
     }
 </style>
 
