--- a/components/navbar/navbar-horizontal.component.html
+++ b/components/navbar/navbar-horizontal.component.html
@@ -7,16 +7,18 @@
 
     navbar-horizontal {
         height: 64px;
-        width: 100%;
         padding-left: 12px;
-        display: block;
-        padding-right: 25px;
+        display: -webkit-flex;
+        display: -moz-flex;
+        display: -ms-flex;
+        display: -o-flex;
+        display: flex;
+
+        align-items: center;
     }
     .navbar-horizontal__cube {
-        float: left;
         width: 31px;
         height: 34px;
-        margin-top: 17px;
         margin-left: 14px;
         margin-right: 33px;
         display: inline-block;
@@ -24,6 +26,7 @@
         -webkit-background-size: cover;
         background-size: cover;
         background-position: center center;
+        order: -99;
     }
 </style>
 
