--- a/components/navbar/navbar-vertical.component.html
+++ b/components/navbar/navbar-vertical.component.html
@@ -3,10 +3,15 @@
 <style>
 
     navbar-vertical {
-        display: inline-block;
-/*        height: 854px;*/
+        display: -webkit-flex;
+        display: -moz-flex;
+        display: -ms-flex;
+        display: -o-flex;
+        display: flex;
         width: 40px;
         background-color: #0C003B;
+        flex-direction: column;
+        align-items: center;
     }
 
 </style>
