--- a/components/requirement/requirement-card-footer.component.html
+++ b/components/requirement/requirement-card-footer.component.html
@@ -4,11 +4,23 @@
         height: 27px;
         width: 100%; 
         border-top: 1px solid #F4F4F4;
-        display: inline-block;
+        display: -webkit-flex;
+        display: -moz-flex;
+        display: -ms-flex;
+        display: -o-flex;
+        display: flex;
         padding-left: 15px;
+        align-items: center;
     }
     .requirement-card--footer__more {
         margin-right: 11px;
+        display: -webkit-flex;
+        display: -moz-flex;
+        display: -ms-flex;
+        display: -o-flex;
+        display: flex;
+        width: 11px;
+        justify-content: space-between;
     }
     .requirement-card--footer__more--dot {
         width: 2px;
@@ -16,11 +28,14 @@
         border-radius: 50%;
         margin-right: 1px;
         background-color: #000;
-        display: inline-block;
     }
     .requirement-card--footer__balls {
-        display: inline-block;
-        margin-top: 2px;
+        display: -webkit-flex;
+        display: -moz-flex;
+        display: -ms-flex;
+        display: -o-flex;
+        display: flex;
+        max-width: 82%;
     }
     .requirement-card--footer__ball {
         display: inline-block;
@@ -31,6 +46,7 @@
         border-radius: 50%;
         background-color: #89b46a;
         line-height: 15.5px;
+        margin-right: 6px;
     }
 </style>
 
