--- a/components/requirement/requirement-card.component.html
+++ b/components/requirement/requirement-card.component.html
@@ -9,6 +9,16 @@
         display: inline-block;
         border-left: 2px solid #FF2D55;
         margin-top: 25px;
+        display: -webkit-flex;
+        display: -moz-flex;
+        display: -ms-flex;
+        display: -o-flex;
+        display: flex;
+        -webkit-flex-direction: column;
+        -moz-flex-direction: column;
+        -ms-flex-direction: column;
+        -o-flex-direction: column;
+        flex-direction: column;
     }
 </style>
 
