--- a/components/test-cases/project-case-table.component.html
+++ b/components/test-cases/project-case-table.component.html
@@ -1,5 +1,22 @@
 <style>
-    
+    project-case-table {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        font: 13px/23px globerbold;
+    }
+    .project-case-table__caption{
+        height: 35px;
+        border-bottom: 1px solid #E4E4E4;
+        display: table-row;
+    }
+    project-case-table table {
+        width: 100%;
+        border-collapse: collapse;
+    }
+    .project-case-table__caption td {
+        min-width: 20px;
+    }
 </style>  
 <template id="project-case-table__tmpl">
     <table>
@@ -20,9 +37,7 @@
             super()
             this.insertBefore(ProjectCaseTableTemplate.content.cloneNode(true), this.firstChild);
             var tableAttr = this.attributes;
-            console.log(tableAttr);
             for (var i = 0; i < tableAttr.length;  i++) {
-                // var arr = tableAttr[i].split(': ');
                 var element = thatDoc.createElement("td");
                 element.innerHTML = tableAttr[i].nodeValue;
                 this.querySelector('.project-case-table__caption').appendChild(element);
