--- a/components/test-cases/test-cases.component.html
+++ b/components/test-cases/test-cases.component.html
@@ -1,2 +1,3 @@
 <link rel="import" href="project-case.component.html">
 <link rel="import" href="project-case-table.component.html">
+<link rel="import" href="project-case-row.component.html">
