--- a/components/navbar/navbar-horizontal.component.html
+++ b/components/navbar/navbar-horizontal.component.html
@@ -13,7 +13,7 @@
         display: -ms-flex;
         display: -o-flex;
         display: flex;
-
+        border-top: 1px solid #eee;
         align-items: center;
     }
     .navbar-horizontal__cube {
