--- a/components/sidebar-wrapp/sidebar-wrapp.component.html
+++ b/components/sidebar-wrapp/sidebar-wrapp.component.html
@@ -2,6 +2,7 @@
 <link rel="import" href="sidebar-textarea.component.html">
 <link rel="import" href="sidebar-header.component.html">
 <link rel="import" href="sidebar-info-select.component.html">
+<link rel="import" href="sidebar-nav-link.component.html">
 
 
 <!--Style CSS-->
