--- a/components/blocker/blocker-person.component.html
+++ b/components/blocker/blocker-person.component.html
@@ -5,7 +5,7 @@
         width: 100%;
         height: 26px;
         line-height: 26px;
-
+        border-bottom: 1px dashed #D7D7D7;
     }
     blocker-person:hover {
         cursor: pointer;
@@ -27,9 +27,9 @@
     .blocker-person__specialization {
         float: right;
         display: inline-block;
-        max-width: 50px;
+        max-width: 75 px;
         font: 11px 'globerregular';
-        text-transform: uppercase;
+/*        text-transform: uppercase;*/
         color: #585858;
         line-height: 30px;
         overflow: hidden;
