--- a/components/navbar/navbar-vartical-item.component.html
+++ b/components/navbar/navbar-vartical-item.component.html
@@ -98,12 +98,12 @@
         }
 
         attributeChangedCallback(name, oldVal, newVal) {
-            if (this.enable) {
-                console.log('enable');
-
-            } else {
-                console.log('disable');
-            }
+//            if (this.enable) {
+//                console.log('enable');
+//
+//            } else {
+//                console.log('disable');
+//            }
         }
 
         adoptedCallback() {}
