--- a/components/test-cases/project-case-row.component.html
+++ b/components/test-cases/project-case-row.component.html
@@ -1,12 +1,11 @@
 <style>
-
     .project-case-row__item {
         height: 30px;
         font-family: globerregular;
         border-bottom: 1px solid #E4E4E4;
-    display: table-row;
+        display: table-row;
     }
-</style>  
+</style>
 <template id="project-case-row__tmpl"> 
     <tr class="project-case-row__item">
     </tr>
@@ -18,33 +17,30 @@
     var thisDoc = (thatDoc._currentScript || thatDoc.currentScript).ownerDocument;
 
     var ProjectCaseRowTemplate = thisDoc.querySelector('#project-case-row__tmpl');
+    var a = thisDoc.querySelector('#project-case-row__tmpl');
 
     class ProjectCaseRow extends HTMLElement {
 
         constructor() {
             super()
-            thatDoc.querySelector('project-case-table table').appendChild(ProjectCaseRowTemplate.content.cloneNode(true));
+            thatDoc.querySelector('project-case-table tbody').appendChild(ProjectCaseRowTemplate.content.cloneNode(true));
             var tableAttr = this.attributes;
-            console.log(tableAttr);
-            for (var i = 0; i < tableAttr.length;  i++) {
+            for (var i = 0; i < tableAttr.length; i++) {
                 var element = thisDoc.createElement("td");
                 element.innerHTML = tableAttr[i].nodeValue;
-                console.log(tableAttr[i].nodeValue)
-                // thisDoc.querySelector('.project-case-row__item').appendChild(element);
-
+                thisDoc.querySelector('.project-case-row__item').appendChild(element);
             }
+
         }
 
-    connectedCallback() {
+        connectedCallback() {
 
+        }
+
+
+
+        adoptedCallback() {}
     }
 
-
-
-    adoptedCallback() {
-    }
-}
-
-customElements.define('project-case-row', ProjectCaseRow);
-
+    customElements.define('project-case-row', ProjectCaseRow);
 </script>
