--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,8 @@
 *,
 :before,
 :after {
-    box-sizing: border-box; }
+    box-sizing: border-box;
+}
 
 * {
     background: transparent;
@@ -13,87 +14,114 @@
     text-decoration: inherit;
     padding: 0;
     border: 0;
-    margin: 0; }
+    margin: 0;
+}
+
 
 /* HTML5 tags not defined in IE 6/7/8/9 and Firefox 3 */
+
 nav {
-    display: block; }
+    display: block;
+}
 
 video {
-    display: inline-block; }
+    display: inline-block;
+}
+
 
 /***/
+
 html {
     background: #fff;
     color: #000;
-    line-height: 1; }
+    line-height: 1;
+}
+
 
 /* Grouping content & Text-level semantics */
+
 ul {
-    list-style-type: none; }
+    list-style-type: none;
+}
 
 img {
-    display: block; }
+    display: block;
+}
+
 
 /* Tabular data */
+
 
 /* UI controls */
 
 label {
     display: block;
-    width: 100%; }
+    width: 100%;
+}
 
 :focus {
-    outline: 0; }
+    outline: 0;
+}
 
 ::-moz-focus-inner {
     padding: 0;
-    border: 0; }
+    border: 0;
+}
+
 
 /* Input placeholders */
+
 ::-webkit-input-placeholder {
     color: inherit;
-    opacity: 1; }
+    opacity: 1;
+}
+
 ::-moz-placeholder {
     color: inherit;
-    opacity: 1; }
+    opacity: 1;
+}
+
 :-ms-input-placeholder {
     color: inherit;
-    opacity: 1; }
+    opacity: 1;
+}
+
 ::placeholder {
     color: inherit;
-    opacity: 1; }
+    opacity: 1;
+}
 
 @font-face {
     font-family: 'globerbold';
     src: url('../fonts/glober_bold-webfont.eot');
     src: url('../fonts/glober_bold-webfont.eot?#iefix') format('embedded-opentype'),
-/*        url('../fonts/glober_bold-webfont.woff') format('woff'),*/
-/*        url('../fonts/glober_bold-webfont.ttf') format('truetype'),*/
-        url('../fonts/glober_bold-webfont.svg#globerbold') format('svg');
+    /*        url('../fonts/glober_bold-webfont.woff') format('woff'),*/
+    /*        url('../fonts/glober_bold-webfont.ttf') format('truetype'),*/
+    url('../fonts/glober_bold-webfont.svg#globerbold') format('svg');
     font-weight: normal;
     font-style: normal;
 }
+
 @font-face {
     font-family: 'globerregular';
     src: url('../fonts/glober_regular-webfont.eot');
     src: url('../fonts/glober_regular-webfont.eot?#iefix') format('embedded-opentype'),
-/*        url('../fonts/glober_regular-webfont.woff') format('woff'),*/
-/*        url('../fonts/glober_regular-webfont.ttf') format('truetype'),*/
-        url('../fonts/glober_regular-webfont.svg#glober_regularregular') format('svg');
+    /*        url('../fonts/glober_regular-webfont.woff') format('woff'),*/
+    /*        url('../fonts/glober_regular-webfont.ttf') format('truetype'),*/
+    url('../fonts/glober_regular-webfont.svg#glober_regularregular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
+
 @font-face {
     font-family: 'globersemibold';
     src: url('../fonts/glober_semibold-webfont.eot');
     src: url('../fonts/glober_semibold-webfont.eot?#iefix') format('embedded-opentype'),
-/*        url('../fonts/glober_semibold-webfont.woff') format('woff'),*/
-/*        url('../fonts/glober_semibold-webfont.ttf') format('truetype'),*/
-        url('../fonts/glober_semibold-webfont.svg#globersemibold') format('svg');
+    /*        url('../fonts/glober_semibold-webfont.woff') format('woff'),*/
+    /*        url('../fonts/glober_semibold-webfont.ttf') format('truetype'),*/
+    url('../fonts/glober_semibold-webfont.svg#globersemibold') format('svg');
     font-weight: normal;
     font-style: normal;
-
 }
 
 .container {
@@ -103,12 +131,13 @@ label {
     display: -o-flex;
     display: flex;
     margin-bottom: 50px;
-    
 }
+
 .container-blocker {
     width: 320px;
     position: relative;
 }
+
 .nav {
     width: 100%;
     height: 64px;
@@ -122,13 +151,12 @@ label {
     display: -ms-flex;
     display: -o-flex;
     display: flex;
-/*    flex-direction: column;*/
-/*    align-items: baseline;*/
+    /*    flex-direction: column;*/
+    /*    align-items: baseline;*/
     flex-wrap: wrap;
     border-left: 1px solid #eee;
     border-right: 1px solid #eee;
     border-top: 1px solid #eee;
-/*    align-content: space-between;*/
+    /*    align-content: space-between;*/
     max-width: 320px;
 }
-
