--- a/components/navbar/navbar-horizontal.component.html
+++ b/components/navbar/navbar-horizontal.component.html
@@ -15,6 +15,7 @@
         display: flex;
         border-top: 1px solid #eee;
         align-items: center;
+        padding-right: 25px;
     }
     .navbar-horizontal__cube {
         width: 31px;
