--- a/components/test-cases/test-cases.component.html
+++ b/components/test-cases/test-cases.component.html
@@ -1,3 +1,4 @@
 <link rel="import" href="project-case.component.html">
 <link rel="import" href="project-case-table.component.html">
 <link rel="import" href="project-case-row.component.html">
+<link rel="import" href="test-cases-project-item.component.html">
