--- a/components/sidebar-wrapp/sidebar-wrapp.component.html
+++ b/components/sidebar-wrapp/sidebar-wrapp.component.html
@@ -19,6 +19,7 @@
         border-left: 1px solid #eee;
         border-right: 1px solid #eee;
         border-top: 1px solid #eee;
+/*        min-height: 93.5vh;*/
     }
 </style>
 
