--- a/components/step-status/step-status.component.html
+++ b/components/step-status/step-status.component.html
@@ -5,6 +5,7 @@
         border-bottom: 1px dotted #DDDDDD;
         padding-top: 10px;
         position: relative;
+        display: flex;
     }
     
     .step-status__info {
