dropdown list fix

--- a/components/blocker/blocker-wrapp.component.html
+++ b/components/blocker/blocker-wrapp.component.html
@@ -5,11 +5,11 @@
 <style>
     blocker-wrapp {
         width: 100%;
-        display: -webkit-inline-flex;
-        display: -moz-inline-flex;
-        display: -ms-inline-flex;
-        display: -o-inline-flex;
-        display: inline-flex;
+        display: -webkit-flex;
+        display: -moz-flex;
+        display: -ms-flex;
+        display: -o-flex;
+        display: flex;
         -webkit-flex-direction: column;
         -moz-flex-direction: column;
         -ms-flex-direction: column;
